fix: decrease layer position of action menu to be behind table heading

--- a/src/components/action-menu/actionMenu.module.scss
+++ b/src/components/action-menu/actionMenu.module.scss
@@ -20,7 +20,7 @@
   display: none;
   position: absolute;
   right: -32px;
-  z-index: 10;
+  z-index: 1;
   list-style: none;
 
   li {
